feat(gitguard): implement type-safe template system with comprehensive management features (#30)
* feat(template): implement type-safe template system for AI prompts

Introduces a new template system with Handlebars support for AI operations:
• Add TemplateRegistry service with YAML-based template discovery
• Create comprehensive type definitions for different prompt templates
• Implement integration and unit tests for template functionality
• Add documentation for template system architecture and integration
• Update AI types to support template-based prompts
• Add Handlebars and YAML package dependencies

* feat(template): enhance template discovery and management

Implements comprehensive template system improvements:
• Add enhanced template discovery with detailed logging and statistics
• Implement template-based choice generation for AI prompts
• Refactor template registry API for better type safety and usability
• Add template variables mapping for different prompt types
• Improve error handling and user feedback for template loading
• Add default template fallback mechanism
• Update integration tests for new template functionality

* feat(cli): add template management command with E2E tests

Adds comprehensive template management CLI features:
• Implement template command with init, validate, and list actions\n• Add E2E test suite for template management functionality\n• Include default templates for all prompt types\n• Add template directory initialization with --path support\n• Implement template validation with detailed error reporting\n• Add template listing with formatted output and grouping\n• Enhance template registry with auto-ID generation and validation\n• Update test utilities to support template verification

* refactor(template): improve template management with versioning and updates

Refactors template handling system for better maintainability and features:
• Extract template utilities into dedicated template.util.

--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -31,13 +31,18 @@
     "test": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
     "test:unit": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
     "test:unit:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit --watch",
-    "test:integration": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects integration",
+    "test:integration": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' TS_NODE_PROJECT=tsconfig.test.json jest --config jest.config.cjs --selectProjects integration",
     "test:integration:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects integration --watch",
     "test:all": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit integration",
     "test:e2e": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --interactive",
     "test:e2e:init:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-basic",
     "test:e2e:init:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-global",
     "test:e2e:init:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-monorepo",
+    "test:e2e:template:init": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-init-basic",
+    "test:e2e:template:validate": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-valid",
+    "test:e2e:template:invalid": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-invalid",
+    "test:e2e:template:list": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-list",
+    "test:e2e:template:custom": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-custom-path",
     "test:e2e:status:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-basic",
     "test:e2e:status:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-global",
     "test:e2e:status:local": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-local",
@@ -72,11 +77,13 @@
     "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
+    "handlebars": "^4.7.8",
     "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
     "jsonc-parser": "^3.3.1",
     "minimatch": "^10.0.1",
-    "openai": "^4.70.2"
+    "openai": "^4.70.2",
+    "yaml": "^2.6.0"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
